--- a/atividades/atividade002-landing-page/css/estilo.css
+++ b/atividades/atividade002-landing-page/css/estilo.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Times New Roman', Times, serif;
+    font-size: 1.1em;
 }
 
 header {
@@ -13,8 +14,7 @@ nav {
     background-color: #000000;
     color: #ffffff;
     font-size: 1.2em;
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 
 nav a {
@@ -31,7 +31,7 @@ nav a:hover {
 }
 
 picture img {
-    height: 90%;
+    height: 90;
     width: 100%;
 }
 
@@ -44,27 +44,23 @@ body {
 }
 
 main {
-    justify-content: center;
     padding: 20px;
     margin: 20px;
+    text-align: center;
 }
 
 section {
     background-color: #000000;
     margin: 0px;
     text-align: center;
-    justify-content: center;
     border-radius: 10px;
 }
 section h2 {
     padding: 10px;
     margin: 10px;
-    justify-content: center;
 }
 
 article {
-    display: flex;
-    justify-content: center;
     margin: 30px;
     padding: 30px;
 }
@@ -74,11 +70,11 @@ article p {
     background-color:#313131;
 }
 
-figure {
-    display: flex;
+article figure {
     padding: 50px;
+    margin: 10px;
 }
-section .voltar-inicio {
+.voltar-inicio {
     color: #000000;
     background-color: #ffffff;
     border-radius: 5px;
