--- a/atividades/atividade002-landing-page/css/estilo.css
+++ b/atividades/atividade002-landing-page/css/estilo.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 1.1em;
+    font-size: 1;
 }
 
 header {
@@ -13,7 +13,7 @@ header {
 nav {
     background-color: #000000;
     color: #ffffff;
-    font-size: 1.2em;
+    font-size: 1.3em;
     text-align: center;
 }
 
@@ -46,35 +46,42 @@ body {
 main {
     padding: 20px;
     margin: 20px;
-    text-align: center;
 }
 
 section {
     background-color: #000000;
     margin: 0px;
-    text-align: center;
     border-radius: 10px;
+    text-align: left;
 }
 section h2 {
     padding: 10px;
     margin: 10px;
+    text-align: center;
 }
+
 
 article {
     margin: 30px;
     padding: 30px;
+    font-size: 1.3em;
 }
-
 article p {
     color: #ffffff;
     background-color:#313131;
 }
 
-article figure {
-    padding: 50px;
-    margin: 10px;
-}
+article img {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    float: left;
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+  
 .voltar-inicio {
+    text-align: center;
     color: #000000;
     background-color: #ffffff;
     border-radius: 5px;
@@ -91,4 +98,22 @@ footer {
     color: #ffffff;
     text-align: center;
     padding: 10px; margin-top: 20px;
+}
+
+.clear {
+    clear: both;
+}
+
+.float-left img {
+    float: left;
+    margin-right: 15px;
+    width: 150px;
+    height: 150px;
+}
+
+.float-right img {
+    float: right;
+    margin-left: 15px;
+    width: 150px;
+    height: 150px;
 }
