--- a/atividades/atividade002-landing-page/css/estilo.css
+++ b/atividades/atividade002-landing-page/css/estilo.css
@@ -13,22 +13,18 @@ header {
 nav {
     background-color: #000000;
     color: #ffffff;
-    font-size: 1.3em;
     text-align: center;
 }
 
 nav a {
     color: #000000;
-    margin: 0 30px;
+    margin: 0px 30px;
     padding: 0px 30px;
     border-radius: 35px;
     background-color:#ffffff;
+    text-decoration: none;
 }
 
-nav a:hover {
-    background-color: #313131;
-    color: #ffffff;
-}
 
 picture img {
     height: 90;
@@ -38,7 +34,7 @@ picture img {
 
 body {
     color: #ffffff;
-    background-color: #000000;
+    background-color: #121322;
     margin: 0;
     padding: 0;
 }
@@ -50,13 +46,13 @@ main {
 
 section {
     background-color: #000000;
-    margin: 0px;
-    border-radius: 10px;
-    text-align: left;
+    margin: 10px;
+    border-radius: 50px;
+    
 }
 section h2 {
     padding: 10px;
-    margin: 10px;
+    margin: 60px;
     text-align: center;
 }
 
@@ -68,7 +64,6 @@ article {
 }
 article p {
     color: #ffffff;
-    background-color:#313131;
 }
 
 article img {
@@ -87,17 +82,15 @@ article img {
     border-radius: 5px;
     margin: 0 30px;
     padding: 0px 30px;
+    text-decoration: none;
 }
 
-.voltar-inicio:hover {
-    background-color: #313131;
-    color: #ffffff;
-}
+
 footer {
     background-color: #000000;
     color: #ffffff;
     text-align: center;
-    padding: 10px; margin-top: 20px;
+    padding: 50px; margin-top: 50px;
 }
 
 .clear {
@@ -106,14 +99,16 @@ footer {
 
 .float-left img {
     float: left;
-    margin-right: 15px;
-    width: 130px;
-    height: 130px;
+    text-align: right;
+    margin-right: 20px;
+    width: 150px;
+    height: 150px;
 }
 
 .float-right img {
     float: right;
-    margin-left: 15px;
-    width: 130px;
-    height: 130px;
+    text-align: left;
+    margin-left: 20px;
+    width: 150px;
+    height: 150px;
 }
