--- a/atividades/atividade002-landing-page/css/estilo.css
+++ b/atividades/atividade002-landing-page/css/estilo.css
@@ -1,36 +1,41 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1;
+    font-family: Helvetica;
+    text-decoration: none;
 }
+
+/*============================================ HEADER ============================================*/
 
 header {
     background-color: #000000;
     padding: 20px;
 }
 
-nav {
+header nav {
     background-color: #000000;
     color: #ffffff;
     text-align: center;
 }
 
-nav a {
-    color: #000000;
-    margin: 0px 30px;
-    padding: 0px 30px;
-    border-radius: 35px;
-    background-color:#ffffff;
-    text-decoration: none;
+header nav h1 {
+    text-align: left;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-bottom: 0px;
+}
+
+header nav a {
+    color: #d2d28e;
+    margin: 0px 20px;
+    padding: 0px 20px;
+}
+header nav a:hover {
+    color: #fcfc00;
 }
 
 
-picture img {
-    height: 90;
-    width: 100%;
-}
-
+/*============================================ BODY ============================================*/
 
 body {
     color: #ffffff;
@@ -39,76 +44,83 @@ body {
     padding: 0;
 }
 
+
+/*============================================ MAIN ============================================*/
+
 main {
-    padding: 20px;
-    margin: 20px;
+    text-align: center;
 }
 
+main picture img {
+    height: 100%;
+    width: 100%;
+}
+
+
+/*============================================ SECTION ============================================*/
 section {
-    background-color: #000000;
     margin: 10px;
     border-radius: 50px;
     
 }
-section h2 {
+section h1 {
     padding: 10px;
-    margin: 60px;
+    margin: 50px;
+    margin-bottom: 5px;
     text-align: center;
+    font-size: 3rem;
 }
 
+section table {
+    margin: 80px;
+    margin-bottom: 0PX;
+}
+section table p {
+    font-size: 1.0em;
+    margin: 80px;
+    margin-top: 6px;
+}
+section table img{
+    text-align: center;
+    margin-right: 80px;
+    margin-left: 80px;
+    width: 290px;
+    height: 250px;
+}
 
-article {
+section h2 {
     margin: 30px;
-    padding: 30px;
-    font-size: 1.3em;
+    margin-top: 1px;
+    margin-bottom: 100px;
 }
-article p {
+
+
+/*============================================ ARTICLE ============================================*/
+article p{
+    text-align: center;
+    margin-bottom: 25px;
+    margin-left: 280px;
+    margin-right: 280px;
     color: #ffffff;
 }
 
-article img {
-    width: 100%;
-    max-width: 200px;
-    height: auto;
-    float: left;
-    margin-right: 15px;
-    margin-bottom: 15px;
-  }
-  
+/*============================================ CLASSE ============================================*/
+
 .voltar-inicio {
     text-align: center;
-    color: #000000;
-    background-color: #ffffff;
+    color: #d2d28e;
     border-radius: 5px;
-    margin: 0 30px;
-    padding: 0px 30px;
     text-decoration: none;
 }
+.voltar-inicio:hover {
+    color: #fcfc00;
+}
 
+/*============================================ FOOTER ============================================*/
 
 footer {
     background-color: #000000;
     color: #ffffff;
     text-align: center;
     padding: 50px; margin-top: 50px;
-}
-
-.clear {
-    clear: both;
-}
-
-.float-left img {
-    float: left;
-    text-align: right;
-    margin-right: 20px;
-    width: 150px;
-    height: 150px;
-}
-
-.float-right img {
-    float: right;
-    text-align: left;
-    margin-left: 20px;
-    width: 150px;
-    height: 150px;
 }
