--- a/atividades/atividade002-landing-page/css/estilo.css
+++ b/atividades/atividade002-landing-page/css/estilo.css
@@ -5,20 +5,12 @@
     text-decoration: none;
 }
 
-/*============================================ HEADER ============================================*/
-
 header {
     background-color: #000000;
     padding: 20px;
 }
 
-header nav {
-    background-color: #000000;
-    color: #ffffff;
-    text-align: center;
-}
-
-header nav h1 {
+header h1 {
     text-align: left;
     margin-top: 50px;
     margin-left: 50px;
@@ -26,17 +18,21 @@ header nav h1 {
     margin-bottom: 0px;
 }
 
-header nav a {
+nav {
+    background-color: #000000;
+    color: #ffffff;
+    text-align: right;
+    font-size: 1.2rem;
+}
+
+nav a {
     color: #d2d28e;
     margin: 0px 20px;
     padding: 0px 20px;
 }
-header nav a:hover {
+nav a:hover {
     color: #fcfc00;
 }
-
-
-/*============================================ BODY ============================================*/
 
 body {
     color: #ffffff;
@@ -45,9 +41,6 @@ body {
     padding: 0;
 }
 
-
-/*============================================ MAIN ============================================*/
-
 main {
     text-align: center;
 }
@@ -55,38 +48,31 @@ main {
 main picture img {
     height: 100%;
     width: 100%;
+    margin-bottom: 100px;
 }
 
-
-/*============================================ SECTION ============================================*/
 section {
     margin-right: 80px;
     margin-left: 80px;
-    border-radius: 50px;
-    
 }
 section h1 {
-    padding: 10px;
-    margin: 50px;
+    margin: 30px;
     margin-bottom: 5px;
     text-align: center;
     font-size: 3rem;
 }
 
 section h2 {
-    margin: 80px;
-    margin-top: 1px;
-    margin-bottom: 200px;
+    margin: 10px;
     text-align: right;
 }
 
-
 section table {
     display: inline;
-    margin-bottom: 0PX;
+    margin-bottom: 0px;
 }
 section table p {
-    font-size: 1em;
+    font-size: 1.2rem;
     margin: 90px 90px;
     margin-top: 10px;
 }
@@ -97,9 +83,6 @@ section table img{
     width: 290px;
     height: 250px;
 }
-
-
-/*============================================ ARTICLE ============================================*/
 
 article p{
     text-align: center;
@@ -114,8 +97,6 @@ article h2 a{
     text-align: right;
 }
 
-/*============================================ CLASSE ============================================*/
-
 .voltar-inicio {
     color: #d2d28e;
     text-decoration: none;
@@ -123,8 +104,6 @@ article h2 a{
 .voltar-inicio:hover {
     color: #fcfc00;
 }
-
-/*============================================ ID ============================================*/
 
 
 #logo img {
@@ -136,8 +115,6 @@ article h2 a{
 
 #img-separadora img{
     float: center;
-    margin: 15px; 
-    margin-bottom: 1px;
     width: 5%; 
     height: 5%;
 
@@ -151,11 +128,10 @@ article h2 a{
     width: 300px;
     height: 500px;
 }
-/*============================================ FOOTER ============================================*/
 
 footer {
     background-color: #000000;
     color: #ffffff;
     text-align: center;
-    padding: 80px; margin-top: 150px;
+    padding: 80px; margin-top: 60px;
 }
