--- a/testes/css/estilo.css
+++ b/testes/css/estilo.css
@@ -3,66 +3,50 @@
     padding: 0;
     font-family: Helvetica;
     text-decoration: none;
+    font-size: 1.2rem;
+
 }
 
 header {
-    color:#ffffff;
-    font-size: 1.2rem;
+    background-color: #000000;
+    padding: 120px;
 }
-nav {
+
+header h1 {
     color: #ffffff;
-    font-size: 1rem;
-    text-align: center;
+    text-align: left;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 0px;
+}
+
+nav  {
+    background-color: #000000;
+    text-align: left;
+    font-size: 1.2rem;
 }
 
 nav a {
     color: #ffffff;
-
+    margin: 0px 20px;
+    padding: 0px 20px;
 }
 
 nav a:hover {
     color: #fcfc00;
 }
-
-main {
-    text-align: center;
-}
-
-main picture img {
-    width: 100%;
-}
-
-
-.titulo {
-    position: absolute;
-    top: 100px;
-    left: 200px;
-}
-
-.footer {
-    position: absolute;
-    left: 200px;
-    bottom: 100px;
-}
-
-.nav {
-    position: absolute;
-    right: 200px;
-    top: 100px;
-}
-
-.borda {
-    border:2px solid #ffffff;
-    border-radius: 15px;
-}
-
-.invborda {
-    border:2px solid #ffffff00;
-    border-radius: 15px;
-}
-
 footer {
+    background-color: black;
     color: #ffffff;
     text-align: center;
-    font-size: 1.2rem;
+}
+
+.box2 {
+    position: absolute;
+    top: 60px;
+    right: 60px;
+    width: 600px; height: 300px;
+    background-color: lightcoral; 
+    border-radius: 8px;
 }
