--- a/atividades/atividade003/css/estilo.css
+++ b/atividades/atividade003/css/estilo.css
@@ -35,6 +35,42 @@ body {
 }
 
 
+table {
+    width: 80%;
+    margin-left: 150px;
+    margin-bottom: 15px;
+    border-collapse: collapse;
+    border-radius: 5px;
+    background: white;
+    box-shadow: 0 4px 16px rgb(0, 0, 0);
+}
+
+table p {
+    font-size: 1.2rem;
+    margin-top: 10px;
+}
+
+table h2 {
+    font-size: 1.5em;
+    margin: 30px;
+    color: #ffffff;
+}
+
+table img{
+    text-align: center;
+    margin-left: 80px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+article p{
+    text-align: center;
+    margin-bottom: 15px;
+    margin-right: 80px;
+    margin-left: 50px;
+    color: #000000;
+}
 
 .sombra-blur {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
@@ -72,20 +108,27 @@ body {
     color: #fff;
 }
 
-.img-portifolio {
+.img-fundo {
     /* URL da imagem de fundo */
-    background-image: URL("");
+    background-image: URL("https://img.freepik.com/fotos-gratis/elegante-sala-de-estar-escandinava-com-moveis-de-sofa-de-menta-de-design-simulam-plantas-de-mapa-de-posteres-e-eleg_1258-152157.jpg?t=st=1742960286~exp=1742963886~hmac=4eb91f06e81eb20967e79b51f7f362d1e82a7a18991a92070e1929816695aacc&w=1800");
     /* Faz a imagem cobrir todo o conteiner */
-    background-size: cover;
+
     /* Centraliza a imagem dentro do conteiner*/
     background-position: center;
     /* Garante que o header ocupe 100% da largura da tela */
     width: 100%;
+    height: 600px;
+}
+
+.img-table {
+
+    width: 200px;
+    height: 200px;
 }
 
 footer {
     background-color: #ffffff;
     color: #000000;
     text-align: center;
-    padding: 40px; margin-top: 10px;
+    padding: 40px;
 }
