--- a/atividades/atividade003/css/estilo.css
+++ b/atividades/atividade003/css/estilo.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Helvetica;
+    font-family: Helvetica,sans-serif;
     font-size: 1em;
     text-decoration: none;
 }
@@ -19,20 +19,25 @@ header h2{
 nav {
     text-align: center;
     text-decoration: none;
-    background-color: #ffffff;
+    background-color: #4a4949;
     padding: 20px;
 }
 
 nav a {
     padding: 20px; margin: 10px;
-    color: #000000;
-    background-color: #ffffff;
+    color: #ffffff;
 }
 
 body {
     text-align: center;
     background-color: #c1bdbdb4;
 }
+
+main {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
 
 
 table {
@@ -66,6 +71,7 @@ table h2 {
 table img{
     text-align: center;
     margin-left: 10px;
+    margin-right: 10px;
     margin-top: 25px;
     margin-bottom: 15px;
     border-radius: 5px;
@@ -80,13 +86,9 @@ table img{
 
 
 #img-home {
-    /* URL da imagem de fundo */
     background-image: URL("https://img.freepik.com/fotos-gratis/foto-em-escala-de-cinza-do-interior-da-arquitetura-parametrica_181624-54989.jpg?t=st=1742846692~exp=1742850292~hmac=520174bc162ed00d66f62abc7faf48e4d98be3a06a2c33e8c198732ae567d1d5&w=1380");
-    /* Faz a imagem cobrir todo o conteiner */
     background-size: cover;
-    /* Centraliza a imagem dentro do conteiner*/
     background-position: center;
-    /* Garante que o header ocupe 100% da largura da tela */
     margin-top: 20px;
     width: 100%;
     height: 450px;
@@ -110,17 +112,25 @@ table img{
     color: #fff;
 }
 
-.img-fundo {
-    /* URL da imagem de fundo */
-    background-image: URL("https://img.freepik.com/fotos-gratis/elegante-sala-de-estar-escandinava-com-moveis-de-sofa-de-menta-de-design-simulam-plantas-de-mapa-de-posteres-e-eleg_1258-152157.jpg?t=st=1742960286~exp=1742963886~hmac=4eb91f06e81eb20967e79b51f7f362d1e82a7a18991a92070e1929816695aacc&w=1800");
-    /* Faz a imagem cobrir todo o conteiner */
 
-    /* Centraliza a imagem dentro do conteiner*/
+.img-fundo {
+    background-image: URL("https://img.freepik.com/fotos-gratis/elegante-sala-de-estar-escandinava-com-moveis-de-sofa-de-menta-de-design-simulam-plantas-de-mapa-de-posteres-e-eleg_1258-152157.jpg?t=st=1742960286~exp=1742963886~hmac=4eb91f06e81eb20967e79b51f7f362d1e82a7a18991a92070e1929816695aacc&w=1800");
+    background-size: cover;
     background-position: center;
-    /* Garante que o header ocupe 100% da largura da tela */
-    width: 100%;
-    height: 600px;
+    background-repeat: no-repeat;
+    width: 97.2%;
+    min-height: 600px;
+    padding: 20px; 
 }
+
+/* 
+background-image: URL("https://img.freepik.com/fotos-gratis/elegante-sala-de-estar-escandinava-com-moveis-de-sofa-de-menta-de-design-simulam-plantas-de-mapa-de-posteres-e-eleg_1258-152157.jpg?t=st=1742960286~exp=1742963886~hmac=4eb91f06e81eb20967e79b51f7f362d1e82a7a18991a92070e1929816695aacc&w=1800");
+
+background-position: center;
+
+width: 100%;
+height: 600px;*/
+
 
 .img-table {
 
@@ -129,8 +139,79 @@ table img{
 }
 
 
-footer {
+.formulario-container {
+    width: 50%;
+    margin: auto;
+    background: white;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+  
+  
+label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+    text-align: left;
+}
+  
+ 
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+  
+
+button {
+    margin-top: 15px;
+    padding: 10px 20px;
+    border: none;
+    background-color: #000000;
+    color: white;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+button:hover {
+    color: #000000;
     background-color: #ffffff;
+}
+  
+
+.icone-cliente {
+    border-radius: 100px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+
+
+
+.contato-footer {
+    margin-top: 20px;
+    font-size: 1.1em;
+}
+
+.contato-footer p {
+    margin: 5px 0; 
+}
+
+.contato-footer p strong {
+    color: #000000;
+
+}
+footer {
+    background-color: #f1f1f1;
     color: #000000;
     text-align: center;
     padding: 40px;
