--- a/atividades/atividade3-/css/estilo.css
+++ b/atividades/atividade3-/css/estilo.css
@@ -27,12 +27,24 @@ nav {
   text-align: center;
   background-color: #182522;
   padding: 20px;
+  box-shadow:15px 5px 10px rgba(0, 0, 0, 0.5);
+  
 }
 
 nav a {
   padding: 20px;
   margin: 10px;
   color: #ffffff;
+  
+}
+
+a {
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #000000;
+  background-color: #ffffff;
 }
 
 /* Estilos de body */
@@ -46,10 +58,14 @@ main {
   padding-top: 50px;
   padding-bottom: 50px;
 }
-
+main h1 {
+  font-size: 2em;
+  padding-top: 150px;
+  color:#000000;
+}
 /* Seção principal */
 section {
-  background-color: #182522;
+  
   color: #ffffff;
   border-radius: 10px;
   margin-top: 150px;
@@ -62,54 +78,102 @@ article {
   line-height: 1.6;
 }
 
-article p {
+article a {
   margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 20px;
 }
-
 article h2 {
   font-weight: bold;
   font-size: 1.5em;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 40px;
+}
 
+article p {
+  margin-top: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .container {
+  box-shadow: 15px 15px 10px rgba(0, 0, 0, 0.5);
   width: 80%; /* Largura ajustada */
+  background-color: #182522;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
+}
+
+.container-inline { 
+  text-decoration: none;
+  width: 100%; 
+  margin: 20px 0; 
+  padding: 10px; 
+} 
+
+.inline-block { 
+  display: inline-block; 
+  background-color: rgb(156, 168, 156); 
+  padding: 10px; 
+  margin-right: 10px; 
+  border-radius: 10px;
+}
+
+.inline-text p {
+ text-align: left;
+  margin-top: 20px;
+  margin-right: 50px;
+  margin-left: 50px;
+  margin-bottom: 20px;
+
+}
+
+#img-pop img {
+  display: inline;
+  justify-content: center;
+  margin: 50px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  border:5px solid #182522;
+  box-shadow: 15px 15px 10px rgba(0, 0, 0, 0.5);
+  width: 200px;
+  height: 500px;
 }
 
 /* Bloco com imagem à esquerda e texto à direita */
 .img-text-left {
   float: left;
   margin-top: 20px;
-  margin-right: 50px;
-  margin-left: 50px;
+  margin-right: 60px;
+  margin-left: 60px;
   margin-bottom: 20px;
 }
 
 .img-text-left img {
-  width: 300px;
-  height: 300px;
+  width: 280px;
+  height: 280px;
   border-radius: 10px;
+  border:5px solid rgb(255, 255, 255);
 }
 
 
 /* Bloco com imagem à direita e texto à esquerda */
-.img-right {
+.img-text-right {
   float: right;
   margin-top: 20px;
-  margin-right: 50px;
-  margin-left: 50px;
+  margin-right: 60px;
+  margin-left: 60px;
   margin-bottom: 20px;
 }
 
-.img-right img {
-  width: 300px;
-  height: 300px;
+.img-text-right img {
+  width: 280px;
+  height: 280px;
   border-radius: 10px;
+  border:5px solid rgb(255, 255, 255);
 }
 
 /* Limpeza de flutuação (float) */
@@ -117,9 +181,57 @@ article h2 {
   clear: both;
 }
 
+.container-comentario {
+  box-shadow: 15px 15px 10px rgba(0, 0, 0, 0.5);
+  width: 80%;
+  color: #00ff3c;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+
+.container-cliente {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  background: #182522;
+  border-radius: 10px;
+
+}
+
+.icone-cliente {
+  justify-content: center;
+  border-radius: 90px;
+  margin-right: 50px;
+  margin-left: 220px;
+  width: 70px;
+}
+
+.img-text-cliente {
+  float: left;
+  margin-top: 20px;
+  margin-right: 60px;
+  margin-left: 60px;
+  margin-bottom: 20px;
+}
+
+.img-text-cliente img {
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
+  border:5px solid #182522;;
+}
+
+.conteudo-cliente p {
+  margin: 5px 0;
+  font-size: 14px;
+  color: #ffffff;
+}
+
+
 /* Fundo da imagem */
 .img-fundo {
-  background-image: URL("../img/13684532_5330832.jpg");
+  background-image: URL("../img/fundo-main.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -129,7 +241,7 @@ article h2 {
 }
 
 .fundo-header {
-  background-image: URL("../img/5056.jpg");
+  background-image: URL("../img/fundo-header.jpg");
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -140,15 +252,20 @@ article h2 {
 .formulario-container {
   width: 50%;
   margin: auto;
-  background: white;
+  background: #182522;
+  color: #ffffff;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
 
+.sombra-blur {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
 
 label {
-  color: #000000;
+  color: #ffffff;
   display: block;
   margin-top: 10px;
   font-weight: bold;
@@ -170,7 +287,7 @@ button {
   margin-top: 15px;
   padding: 10px 20px;
   border: none;
-  background-color: #000000;
+  background-color: #2d4332;
   color: white;
   font-size: 16px;
   border-radius: 4px;
